--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Hello EJS!!!!</h1>
+    <div>
+      <img src="images/drink-coffe-house.jpg" alt="drink-coffe-house.jpg" />
+    </div>
   </body>
 </html>
