--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Hello EJS!!!!</h1>
     <div>
-      <img src="images/drink-coffe-house.jpg" alt="drink-coffe-house.jpg" />
+      <img
+        class="img"
+        src="images/drink-coffe-house.jpg"
+        alt="drink-coffe-house.jpg"
+      />
     </div>
   </body>
 </html>
