--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,5 +13,30 @@
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
     </div>
+    <div class="form">
+      <form action="">
+        <fieldset>
+          <legend>Form add new User</legend>
+          <br />
+          <div class="input-group">
+            <label for="">Email</label>
+            <input type="text" />
+          </div>
+          <br />
+          <div class="input-group">
+            <label for="">Name</label>
+            <input type="text" />
+          </div>
+          <br />
+          <div class="input-group">
+            <label for="">City</label>
+            <input type="text" />
+          </div>
+          <div class="button">
+            <button>Save</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
   </body>
 </html>
