--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,23 +14,23 @@
       <a href="#about">About</a>
     </div>
     <div class="form">
-      <form action="">
+      <form action="/create-user" method="post">
         <fieldset>
-          <legend>Form add new User</legend>
+          <legend>Add new User</legend>
           <br />
           <div class="input-group">
             <label for="">Email</label>
-            <input type="text" />
+            <input name="email" type="text" />
           </div>
           <br />
           <div class="input-group">
             <label for="">Name</label>
-            <input type="text" />
+            <input type="text" name="name" />
           </div>
           <br />
           <div class="input-group">
             <label for="">City</label>
-            <input type="text" />
+            <input type="text" name="city" />
           </div>
           <div class="button">
             <button>Save</button>
