--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -18,17 +18,17 @@
           <br />
           <div class="input-group">
             <label for="">Email</label>
-            <input name="email" type="text" />
+            <input value="<%= user[0].email%>" name="email" type="text" />
           </div>
           <br />
           <div class="input-group">
             <label for="">Name</label>
-            <input type="text" name="name" />
+            <input value="<%= user[0].name%>" type="text" name="name" />
           </div>
           <br />
           <div class="input-group">
             <label for="">City</label>
-            <input type="text" name="city" />
+            <input value="<%= user[0].city%>" type="text" name="city" />
           </div>
           <div class="button">
             <button>Save</button>
